Se agrega la primer receta completa
Contiene toda la informacion

--- a/recipes/pizza-pepperoni.html
+++ b/recipes/pizza-pepperoni.html
@@ -6,5 +6,55 @@
         </head>
         <body>
             <h1>Pizza Pepperoni</h1>
+            <img src="images/Pepperoni-Pizza-Cheese-Drip-Chips.jpg" width="600" alt="Pepperoni pizza cheese drip chips">
+            <h3>Pepperoni Pepperoni Pizza Cheese Drip Chips</h3>
+                <p>Everyone seems to love those crispy, crusty bits of cheese that drip over the edge of a pizza, which is 
+                why I've wanted to do a snack video featuring just that for many years.</p>
+            <h5>INGREDIENTS:</h5>
+                <ul>
+                    <li>4 ounces low-moisture mozzarella cheese</li>
+                    <li>4 ounces provolone cheese</li>
+                    <li>2 ounces Parmigiano-Reggiano cheese</li>
+                    <li>1/2 cup prepared pizza sauce</li>
+                    <li>30 slices pepperoni</l>
+                </ul>
+            <h3>Steps:</h3>
+                <ol>
+                    <li>
+                        Preheat the oven to 400 degrees F (200 degrees C). Line a 13x18-inch,half-sheets
+                        pan with parchment paper.
+                    </li>
+                    <p></p> <!--This is only for make some space between steps-->
+                    <li>
+                        Grate provolone and mozzarella cheeses with the larger side of a box grater into 
+                        a large bowl. Use the smaller side and grate in Parmigiano-Reggiano cheese. Toss 
+                        with your hands to combine.
+                    </li>
+                    <p></p><!--This is only for make some space between steps-->
+                    <li>
+                        Scoop tablespoonfuls of the cheese mixture into 12 circular piles on the prepared 
+                        baking sheet, making sure you're getting all three cheeses in each scoop. Top each 
+                        circle with about ¾ teaspoon pizza sauce, then place a slice of pepperoni on top.
+                    </li>
+                    <p></p><!--This is only for make some space between steps-->
+                    <li>
+                        Bake in the center of the preheated oven until melted and sizzling, 12 to 15 minutes.
+                    </li>
+                    <p></p><!--This is only for make some space between steps-->
+                    <li>
+                        Remove parchment paper and chips to a wire rack to cool. Line the baking sheet with a 
+                        fresh sheet of parchment paper.
+                    </li>
+                    <p></p><!--This is only for make some space between steps-->
+                    <li>
+                        Repeat Steps 3 to 5 to bake remaining 18 chips.
+                    </li>
+                    <p></p><!--This is only for make some space between steps-->
+                    <li>
+                        Let chips cool to room temperature, 15 to 20 minutes. Remove from the parchment paper 
+                        and serve.
+                    </li>
+                </ol>
+            <a href="../index.html">Home</a>
         </body>
     </html>
