Coreecion en la sintaxis y cambios en nombre de la receta
Eran titulos redundantes

--- a/recipes/pizza-pepperoni.html
+++ b/recipes/pizza-pepperoni.html
@@ -5,9 +5,9 @@
             <title>Pizza</title>
         </head>
         <body>
-            <h1>Pizza Pepperoni</h1>
+            <h1>Pepperoni Pizza Cheese Drip Chips</h1>
             <img src="images/Pepperoni-Pizza-Cheese-Drip-Chips.jpg" width="600" alt="Pepperoni pizza cheese drip chips">
-            <h3>Pepperoni Pepperoni Pizza Cheese Drip Chips</h3>
+            <h3>Description</h3>
                 <p>Everyone seems to love those crispy, crusty bits of cheese that drip over the edge of a pizza, which is 
                 why I've wanted to do a snack video featuring just that for many years.</p>
             <h5>INGREDIENTS:</h5>
