--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         </head>
         <body>
             <h1>Odin Recipes</h1>
-            <a href="recipes/pizza-pepperoni.html">Pizza Pepperoni</a>
+            <ul>
+                <li><a href="recipes/pizza-pepperoni.html">Pepperoni Pizza Cheese Drip Chips</a></li>
+                <li><a href="recipes/pepperoni-pizza-casserole.html">Pepperoni Pizza Casserole</a></li>
+                <li></li>
+            </ul>
         </body>
     </html>
