--- a/recipes/pepperoni-pizza-casserole.html
+++ b/recipes/pepperoni-pizza-casserole.html
@@ -5,7 +5,40 @@
         <title>Pizza Casserole</title>
     </head>
     <body>
+        <a href="../index.html">Home</a>
        <h1>Pepperoni Pizza Casserole</h1>
+       <img src="images/Pepperoni-Pizza-Casserole.jpg" width="600" alt="Pepperoni Pizza Casserole">
+       <h3>Description</h3>
+            <p>This recipe for cheesy pepperoni pizza casserole includes all of your favorite pizza toppings.</p>
+        <h5>INGREDIENTS:</h5>
+            <ul>
+                <li>1 pound ground beef</li>
+                <li>1 (8 ounce) package uncooked egg noddles</li>
+                <li>20 ounces shredded mozzarella cheese, divided</li>
+                <li>1 (16 ounce) jar spaghetti sauce, or as needed</li>
+                <li>1 (8 ounce) package sliced pepperoni, coarsely chopped</li>
+                <li>1 (2.5 ounce) can sliced mushrooms, drained</li>
+                <li>1 (2.5 ounce) can sliced black olives, drained</li>
+            </ul>
+        <h3>Steps:</h3>
+            <ol>
+                <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+                <p></p> <!--This is only for make some space between steps-->
+                <li>Cook ground beef in a skillet over medium heat until no longer pink, 
+                    breaking into crumbles as it cooks, about 10 minutes.</li>
+                <p></p> <!--This is only for make some space between steps-->
+                <li>Fill a large pot with lightly salted water and bring to a rapid boil. 
+                    Cook egg noodles at a boil until tender yet firm to the bite, about 
+                    5 minutes; drain.</li>
+                <p></p> <!--This is only for make some space between steps-->
+                <li>Combine beef, noodles, 1/2 mozzarella cheese, spaghetti sauce, 
+                    pepperoni, mushrooms, and black olives in a large bowl; transfer to 
+                    a 9x13-inch baking dish. Top with remaining 1/2 mozzarella cheese. 
+                    Cover the dish with aluminum foil.</li>
+                <p></p> <!--This is only for make some space between steps-->
+                <li>Bake in the preheated oven until casserole is bubbling, 30 to 45 minutes.</li>
+            </ol>
+        <a href="../index.html">Home</a>
     </body>
 
 </html>
