Agrega un Home al inicio de la pagina
Mejor para permitir regresar a home desde el incio de la pagina

--- a/recipes/pizza-pepperoni.html
+++ b/recipes/pizza-pepperoni.html
@@ -5,6 +5,7 @@
             <title>Pizza</title>
         </head>
         <body>
+            <a href="../index.html">Home</a>
             <h1>Pepperoni Pizza Cheese Drip Chips</h1>
             <img src="images/Pepperoni-Pizza-Cheese-Drip-Chips.jpg" width="600" alt="Pepperoni pizza cheese drip chips">
             <h3>Description</h3>
