--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <ul>
                 <li><a href="recipes/pizza-pepperoni.html">Pepperoni Pizza Cheese Drip Chips</a></li>
                 <li><a href="recipes/pepperoni-pizza-casserole.html">Pepperoni Pizza Casserole</a></li>
-                <li></li>
+                <li><a href="recipes/mini-pepperoni-pizza-cups.html">Mini Pepperoni Pizza Cups</a></li>
             </ul>
         </body>
     </html>
