Adding classes, id
eliminated lines whit no use

--- a/recipes/mini-pepperoni-pizza-cups.html
+++ b/recipes/mini-pepperoni-pizza-cups.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Mini Pizza Cups</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <a href="../index.html">Home</a>
         <h1>Mini  Pepperoni Pizza Cups</h1>
         <img src="images/mini-pepperoni-pizza-cups.jpg" width="600" alt="Mini Pepperoni Pizza Cups">
-        <h3>Description</h3>
-            <p>These mini pepperoni cups taste like pepperoni pizza! The crouton is the crust 
+        <h3 id="description">Description</h3>
+            <p class="description-text">These mini pepperoni cups taste like pepperoni pizza! The crouton is the crust 
                 and you can customize the toppings however you like. So cute, so delicious, 
                 and a perfect party appetizer</p>
         <h5>INGREDIENTS:</h5>
-            <ul>
+            <ul class="all-text">
                 <li>24 large deli-style slices pepperoni</li>
                 <li>24 croutons (from 1 bag croutons)</li>
                 <li>1 1/2 cups prepared pizza sauce</li>
@@ -21,15 +22,15 @@
                 <li>1 (5 ounce) package mini pepperoni</li>
             </ul>
         <h3>Steps:</h3>
-            <ol>
-                <li>Preheat the oven to 400 degrees F (200 degrees C). Using kitchen shears, 
-                    snip four 1/2-inch cuts around the edges of each large pepperoni slice, 
-                    leaving the center uncut.</li>
-                <p></p> <!--This is only for make some space between steps-->
-                <li>In a 24-count mini muffin pan, press each pepperoni down, followed by a 
-                    crouton, a spoonful of pizza sauce, cheese, and mini pepperonis.</li>
-                <p></p> <!--This is only for make some space between steps-->
-                <li>Bake in the preheated oven until cheese melts, about 10 minutes.</li>
+            <ol class="all-text">
+                <div class="list">
+                    <li>Preheat the oven to 400 degrees F (200 degrees C). Using kitchen shears, 
+                        snip four 1/2-inch cuts around the edges of each large pepperoni slice, 
+                        leaving the center uncut.</li>
+                    <li>In a 24-count mini muffin pan, press each pepperoni down, followed by a 
+                        crouton, a spoonful of pizza sauce, cheese, and mini pepperonis.</li>
+                    <li>Bake in the preheated oven until cheese melts, about 10 minutes.</li>
+                </div>
             </ol>
         <a href="../index.html">Home</a>
     </body>
