--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
         <head>
             <meta charset="utf-8">
             <title>Odin Recipes</title>
+            <link rel="stylesheet" href="style.css">
         </head>
         <body>
+            <img src="recipes/images/banner-pizzas.jpg" width="746" height="400" alt="Pizzas Banner">
             <h1>Odin Recipes</h1>
-            <ul>
-                <li><a href="recipes/pizza-pepperoni.html">Pepperoni Pizza Cheese Drip Chips</a></li>
-                <li><a href="recipes/pepperoni-pizza-casserole.html">Pepperoni Pizza Casserole</a></li>
-                <li><a href="recipes/mini-pepperoni-pizza-cups.html">Mini Pepperoni Pizza Cups</a></li>
-            </ul>
+            <ul class="links">
+                <li class="pizza-link"><a href="recipes/pizza-pepperoni.html">Pepperoni Pizza Cheese Drip Chips</a></li>
+                <li class="pizza-link"><a href="recipes/pepperoni-pizza-casserole.html">Pepperoni Pizza Casserole</a></li>
+                <li class="pizza-link"><a href="recipes/mini-pepperoni-pizza-cups.html">Mini Pepperoni Pizza Cups</a></li>
         </body>
     </html>
