Se mejoro el diseno de la pagina home

--- a/recipes/pizza-pepperoni.html
+++ b/recipes/pizza-pepperoni.html
@@ -8,7 +8,7 @@
         <body>
             <a href="../index.html">Home</a>
             <h1>Pepperoni Pizza Cheese Drip Chips</h1>
-            <img src="images/Pepperoni-Pizza-Cheese-Drip-Chips.jpg" width="600" alt="Pepperoni pizza cheese drip chips">
+            <img id="tema" src="images/Pepperoni-Pizza-Cheese-Drip-Chips.jpg" width="600" alt="Pepperoni pizza cheese drip chips">
             <h3 id="description">Description</h3>
                 <p class="description-text">Everyone seems to love those crispy, crusty bits of cheese that drip over the edge of a pizza, which is 
                 why I've wanted to do a snack video featuring just that for many years.</p>
