--- a/recipes/pizza-pepperoni.html
+++ b/recipes/pizza-pepperoni.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-    <html lang="en">
-        <head>
-            <meta charset="utf-8">
-            <title>Pizza</title>
-            <link rel="stylesheet" href="../style.css">
-        </head>
-        <body>
-            <a href="../index.html">Home</a>
-            <h1>Pepperoni Pizza Cheese Drip Chips</h1>
-            <img id="tema" src="images/Pepperoni-Pizza-Cheese-Drip-Chips.jpg" width="600" alt="Pepperoni pizza cheese drip chips">
-            <h3 id="description">Description</h3>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pizza</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <div class="pizzaheader">
+        <h1 class="title">Pepperoni Pizza Cheese Drip Chips</h1>
+        <div class="hometop">
+            <button id="button"><a href="../index.html"><i class="fas fa-home"></i></a></button>
+        </div>
+    </div>
+    <div class="container">
+        <img id="tema" src="images/Pepperoni-Pizza-Cheese-Drip-Chips.jpg" width="846" height="550" alt="Pepperoni pizza cheese drip chips">
+        <div class="description">
+            <h3>Description</h3>
                 <p class="description-text">Everyone seems to love those crispy, crusty bits of cheese that drip over the edge of a pizza, which is 
                 why I've wanted to do a snack video featuring just that for many years.</p>
+        </div>
+        <div class="ingredients">
             <h5>INGREDIENTS:</h5>
                 <ul class="all-text">
                     <li>4 ounces low-moisture mozzarella cheese</li>
@@ -20,6 +30,8 @@
                     <li>1/2 cup prepared pizza sauce</li>
                     <li>30 slices pepperoni</l>
                 </ul>
+        </div>
+        <div class="steps">
             <h3>Steps:</h3>
                 <ol class="all-text">
                     <div class="list">
@@ -53,6 +65,10 @@
                         </li>
                     </div>
                 </ol>
-            <a href="../index.html">Home</a>
-        </body>
-    </html>
+        </div>
+    </div>
+    <div class="footer">
+        <a href="../index.html">Home</a>
+    </div>
+</body>
+</html>
