--- a/recipes/mini-pepperoni-pizza-cups.html
+++ b/recipes/mini-pepperoni-pizza-cups.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -10,28 +10,81 @@
         <h1>Mini  Pepperoni Pizza Cups</h1>
         <img src="images/mini-pepperoni-pizza-cups.jpg" width="600" alt="Mini Pepperoni Pizza Cups">
         <h3 id="description">Description</h3>
-            <p class="description-text">These mini pepperoni cups taste like pepperoni pizza! The crouton is the crust 
-                and you can customize the toppings however you like. So cute, so delicious, 
-                and a perfect party appetizer</p>
+            <p class="description-text"></p>
         <h5>INGREDIENTS:</h5>
             <ul class="all-text">
-                <li>24 large deli-style slices pepperoni</li>
-                <li>24 croutons (from 1 bag croutons)</li>
-                <li>1 1/2 cups prepared pizza sauce</li>
-                <li>16 ounces shredded mozzarella cheese</li>
-                <li>1 (5 ounce) package mini pepperoni</li>
+                
             </ul>
         <h3>Steps:</h3>
             <ol class="all-text">
                 <div class="list">
-                    <li>Preheat the oven to 400 degrees F (200 degrees C). Using kitchen shears, 
-                        snip four 1/2-inch cuts around the edges of each large pepperoni slice, 
-                        leaving the center uncut.</li>
-                    <li>In a 24-count mini muffin pan, press each pepperoni down, followed by a 
-                        crouton, a spoonful of pizza sauce, cheese, and mini pepperonis.</li>
-                    <li>Bake in the preheated oven until cheese melts, about 10 minutes.</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </div>
             </ol>
         <a href="../index.html">Home</a>
     </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Mini Pizza Cups</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <div class="pizzaheader">
+        <h1 class="title">Mini Pizza Cups</h1>
+        <div class="hometop">
+            <button id="button"><a href="../index.html"><i class="fas fa-home"></i></a></button>
+        </div>
+    </div>
+    <img id="tema" src="images/mini-pepperoni-pizza-cups.jpg" width="846" height="550" alt="Pepperoni pizza casserole">
+
+    <div class="contop">
+        <div class="description">
+            <h3 id="des">DESCRIPTION</h3>
+                <p class="description-text">These mini pepperoni cups taste like pepperoni pizza! The crouton is the crust 
+                and you can customize the toppings however you like. So cute, so delicious, 
+                and a perfect party appetizer</p>
+        </div>
+        <div class="ingredients">
+            <h3 id="ing">INGREDIENTS:</h3>
+                <ul class="all-text">
+                    <li>24 large deli-style slices pepperoni</li>
+                    <li>24 croutons (from 1 bag croutons)</li>
+                    <li>1 1/2 cups prepared pizza sauce</li>
+                    <li>16 ounces shredded mozzarella cheese</li>
+                    <li>1 (5 ounce) package mini pepperoni</li>
+                </ul>
+        </div>
+    </div>
+    <div class="conbottom">
+        <h3 id="steps">STEPS:</h3>
+            <ol class="all-text">
+                <div>
+                    <li class="lili">
+                        Preheat the oven to 400 degrees F (200 degrees C). Using kitchen shears, 
+                        snip four 1/2-inch cuts around the edges of each large pepperoni slice, 
+                        leaving the center uncut.
+                    </li>
+                    <li lass="lili">
+                        In a 24-count mini muffin pan, press each pepperoni down, followed by a 
+                        crouton, a spoonful of pizza sauce, cheese, and mini pepperonis.
+                    </li>
+                    <li class="lili">
+                        Bake in the preheated oven until cheese melts, about 10 minutes.
+                    </li>
+                </div>
+            </ol>
+    </div>
+
+    <div class="footer">
+        <button id="button"><a href="../index.html"><i class="fas fa-home"></i></a></button>
+    </div>
+</body>
+
 </html>
