--- a/recipes/pepperoni-pizza-casserole.html
+++ b/recipes/pepperoni-pizza-casserole.html
@@ -1,43 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Pizza Casserole</title>
-        <link rel="stylesheet" href="../style.css">
-    </head>
-    <body>
-        <a href="../index.html">Home</a>
-       <h1>Pepperoni Pizza Casserole</h1>
-       <img src="images/Pepperoni-Pizza-Casserole.jpg" width="600" alt="Pepperoni Pizza Casserole">
-       <h3 id="description">Description</h3>
-            <p class="description-text">This recipe for cheesy pepperoni pizza casserole includes all of your favorite pizza toppings.</p>
-        <h5>INGREDIENTS:</h5>
-            <ul class="all-text">
-                <li>1 pound ground beef</li>
-                <li>1 (8 ounce) package uncooked egg noddles</li>
-                <li>20 ounces shredded mozzarella cheese, divided</li>
-                <li>1 (16 ounce) jar spaghetti sauce, or as needed</li>
-                <li>1 (8 ounce) package sliced pepperoni, coarsely chopped</li>
-                <li>1 (2.5 ounce) can sliced mushrooms, drained</li>
-                <li>1 (2.5 ounce) can sliced black olives, drained</li>
-            </ul>
-        <h3>Steps:</h3>
+<head>
+    <meta charset="UTF-8">
+    <title>Pizza Casserole</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <div class="pizzaheader">
+        <h1 class="title">Pepperoni Pizza Casserole</h1>
+        <div class="hometop">
+            <button id="button"><a href="../index.html"><i class="fas fa-home"></i></a></button>
+        </div>
+    </div>
+    <img id="tema" src="images/Pepperoni-Pizza-Casserole.jpg" width="846" height="550" alt="Pepperoni pizza casserole">
+
+    <div class="contop">
+        <div class="description">
+            <h3 id="des">DESCRIPTION</h3>
+                <p class="description-text">This recipe for cheesy pepperoni pizza casserole includes all of your favorite pizza toppings.</p>
+        </div>
+        <div class="ingredients">
+            <h3 id="ing">INGREDIENTS:</h3>
+                <ul class="all-text">
+                    <li>1 pound ground beef</li>
+                    <li>1 (8 ounce) package uncooked egg noddles</li>
+                    <li>20 ounces shredded mozzarella cheese, divided</li>
+                    <li>1 (16 ounce) jar spaghetti sauce, or as needed</li>
+                    <li>1 (8 ounce) package sliced pepperoni, coarsely chopped</li>
+                    <li>1 (2.5 ounce) can sliced mushrooms, drained</li>
+                    <li>1 (2.5 ounce) can sliced black olives, drained</li>
+                </ul>
+        </div>
+    </div>
+    <div class="conbottom">
+        <h3 id="steps">STEPS:</h3>
             <ol class="all-text">
-                <div class="list">
-                    <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-                    <li>Cook ground beef in a skillet over medium heat until no longer pink, 
-                        breaking into crumbles as it cooks, about 10 minutes.</li>
-                    <li>Fill a large pot with lightly salted water and bring to a rapid boil. 
+                <div>
+                    <li class="lili">
+                        Preheat the oven to 375 degrees F (190 degrees C).
+                    </li>
+                    <li class="lili">
+                        Cook ground beef in a skillet over medium heat until no longer pink, 
+                        breaking into crumbles as it cooks, about 10 minutes.
+                    </li>
+                    <li class="lili">
+                        Fill a large pot with lightly salted water and bring to a rapid boil. 
                         Cook egg noodles at a boil until tender yet firm to the bite, about 
-                        5 minutes; drain.</li>
-                    <li>Combine beef, noodles, 1/2 mozzarella cheese, spaghetti sauce, 
+                        5 minutes; drain.
+                    </li>
+                    <li>
+                        Combine beef, noodles, 1/2 mozzarella cheese, spaghetti sauce, 
                         pepperoni, mushrooms, and black olives in a large bowl; transfer to 
                         a 9x13-inch baking dish. Top with remaining 1/2 mozzarella cheese. 
-                        Cover the dish with aluminum foil.</li>
-                    <li>Bake in the preheated oven until casserole is bubbling, 30 to 45 minutes.</li>
+                        Cover the dish with aluminum foil.
+                    </li>
+                    <li class="lili">
+                        Bake in the preheated oven until casserole is bubbling, 30 to 45 minutes.
+                    </li>
                 </div>
             </ol>
-        <a href="../index.html">Home</a>
-    </body>
+    </div>
+
+    <div class="footer">
+        <button id="button"><a href="../index.html"><i class="fas fa-home"></i></a></button>
+    </div>
+</body>
 
 </html>
