--- a/recipes/pizza-pepperoni.html
+++ b/recipes/pizza-pepperoni.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Pizza</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -14,15 +14,16 @@
             <button id="button"><a href="../index.html"><i class="fas fa-home"></i></a></button>
         </div>
     </div>
-    <div class="container">
-        <img id="tema" src="images/Pepperoni-Pizza-Cheese-Drip-Chips.jpg" width="846" height="550" alt="Pepperoni pizza cheese drip chips">
+    <img id="tema" src="images/Pepperoni-Pizza-Cheese-Drip-Chips.jpg" width="846" height="550" alt="Pepperoni pizza cheese drip chips">
+
+    <div class="contop">
         <div class="description">
-            <h3>Description</h3>
+            <h3 id="des">DESCRIPTION</h3>
                 <p class="description-text">Everyone seems to love those crispy, crusty bits of cheese that drip over the edge of a pizza, which is 
                 why I've wanted to do a snack video featuring just that for many years.</p>
         </div>
         <div class="ingredients">
-            <h5>INGREDIENTS:</h5>
+            <h3 id="ing">INGREDIENTS:</h3>
                 <ul class="all-text">
                     <li>4 ounces low-moisture mozzarella cheese</li>
                     <li>4 ounces provolone cheese</li>
@@ -31,44 +32,45 @@
                     <li>30 slices pepperoni</l>
                 </ul>
         </div>
-        <div class="steps">
-            <h3>Steps:</h3>
-                <ol class="all-text">
-                    <div class="list">
-                        <li>
-                            Preheat the oven to 400 degrees F (200 degrees C). Line a 13x18-inch,half-sheets
-                            pan with parchment paper.
-                        </li>
-                        <li>
-                            Grate provolone and mozzarella cheeses with the larger side of a box grater into 
-                            a large bowl. Use the smaller side and grate in Parmigiano-Reggiano cheese. Toss 
-                            with your hands to combine.
-                        </li>
-                        <li>
-                            Scoop tablespoonfuls of the cheese mixture into 12 circular piles on the prepared 
-                            baking sheet, making sure you're getting all three cheeses in each scoop. Top each 
-                            circle with about ¾ teaspoon pizza sauce, then place a slice of pepperoni on top.
-                        </li>
-                        <li>
-                            Bake in the center of the preheated oven until melted and sizzling, 12 to 15 minutes.
-                        </li>
-                        <li>
-                            Remove parchment paper and chips to a wire rack to cool. Line the baking sheet with a 
-                            fresh sheet of parchment paper.
-                        </li>
-                        <li>
-                            Repeat Steps 3 to 5 to bake remaining 18 chips.
-                        </li>
-                        <li>
-                            Let chips cool to room temperature, 15 to 20 minutes. Remove from the parchment paper 
-                            and serve.
-                        </li>
-                    </div>
-                </ol>
-        </div>
     </div>
+    <div class="conbottom">
+        <h3 id="steps">STEPS:</h3>
+            <ol class="all-text">
+                <div>
+                    <li class="lili">
+                        Preheat the oven to 400 degrees F (200 degrees C). Line a 13x18-inch,half-sheets
+                        pan with parchment paper.
+                    </li>
+                    <li class="lili">
+                        Grate provolone and mozzarella cheeses with the larger side of a box grater into 
+                        a large bowl. Use the smaller side and grate in Parmigiano-Reggiano cheese. Toss 
+                        with your hands to combine.
+                    </li>
+                    <li class="lili">
+                        Scoop tablespoonfuls of the cheese mixture into 12 circular piles on the prepared 
+                        baking sheet, making sure you're getting all three cheeses in each scoop. Top each 
+                        circle with about ¾ teaspoon pizza sauce, then place a slice of pepperoni on top.
+                    </li>
+                    <li>
+                        Bake in the center of the preheated oven until melted and sizzling, 12 to 15 minutes.
+                    </li>
+                    <li class="lili">
+                        Remove parchment paper and chips to a wire rack to cool. Line the baking sheet with a 
+                        fresh sheet of parchment paper.
+                    </li>
+                    <li class="lili">
+                        Repeat Steps 3 to 5 to bake remaining 18 chips.
+                    </li>
+                    <li class="lili">
+                        Let chips cool to room temperature, 15 to 20 minutes. Remove from the parchment paper 
+                        and serve.
+                    </li>
+                </div>
+            </ol>
+    </div>
+
     <div class="footer">
-        <a href="../index.html">Home</a>
+        <button id="button"><a href="../index.html"><i class="fas fa-home"></i></a></button>
     </div>
 </body>
 </html>
